[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/logic/pushable.gd" type="Script" id=1]
[ext_resource path="res://models/puzzlestuff/object_cylinderpiece.obj" type="ArrayMesh" id=2]

[sub_resource type="CylinderShape" id=1]
height = 2.5

[sub_resource type="CylinderShape" id=2]
radius = 1.5
height = 2.5

[sub_resource type="CylinderShape" id=3]
height = 2.5

[node name="Pushable" type="KinematicBody" groups=[
"pushes_pressure_pad",
]]
script = ExtResource( 1 )
push_speed = 0.4
do_camera = false
gravity = 15.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="PushArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="PushArea"]
shape = SubResource( 2 )

[node name="TestPushArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="TestPushArea"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="object_cylinderpiece" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.85, 0, 0, 0, 1, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null
